--- a/src/components/Boxes.css
+++ b/src/components/Boxes.css
@@ -26,7 +26,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   padding: 10% 0;
-  height: 100;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
